Add API for server status
