# webApp/routers/router.go
@@ -31,6 +31,7 @@ func InitRouter() *gin.Engine {
 		apiv1.GET("/minecraft/versions", minecraft.GetAvailableVersions)
 		apiv1.POST("/minecraft/select", minecraft.HandleVersionSelection)
 		apiv1.GET("/minecraft/current", v1.GetCurrentVersion)
+		apiv1.GET("/server/status", v1.GetServerStatus)
 	}
 	distPath := filepath.Join(".", "frontend", "dist")
 	r.StaticFS("/assets", http.Dir(filepath.Join(distPath, "assets")))
